# COMP362---Operating-Systems

./: README.md
BlanchardSeanLab01/list/: CMakeLists.txt  Lab01TestLog.txt  list.c  list.h  main.c  vimtutor
BlanchardSeanLab02/: Notes 362
BlanchardSeanLab02/fileSubCopy/: Test2.txt  Test3.txt
BlanchardSeanLab08/solvency/: CMakeLists.txt
BlanchardSeanLab08/solvency/Test/: solvencytest-processed.txt  solvencytest.txt
BlanchardSeanLab08/solvency/src/: bank.c
BlanchardSeanLab10/replace/: CMakeLists.txt
BlanchardSeanLab10/replace/SampleRuns/: output1-processed.txt  output1.txt  output2-processed.txt  output2.txt
BlanchardSeanLab10/replace/src/: lruList.c  optArray.c  replace.c
COMP362FINALSTUDYSETS_PDF/: COMP_362_Final_Review_Section9_14.docx
Step 1/disk/: disk.c  disk.h  disk_timer.c
Task1/: CMakeLists.txt  Task1Typescript-processed.txt  Task1Typescript.txt  memory_layout.c  process_creation.c
Task2/proc_hier/: typescript2.txt  typescript3.txt
comp362FinalPrograms/Lecture 10/EAT/src/com/company/: Main.java
comp362FinalPrograms/Lecture 10/FIFO replacement policy/src/com/company/: Main.java
comp362FinalPrograms/Lecture 10/LRU replacement policy/src/com/company/: Main.java
comp362FinalPrograms/Lecture 10/OPT replacement policy/src/com/company/: Main.java
comp362FinalPrograms/Lecture 13/C-LOOK (circular unidirectional elevator algorithm)/src/com/company/: Main.java
comp362FinalPrograms/Lecture 13/C-SCAN/src/com/company/: Main.java
comp362FinalPrograms/Lecture 13/FCFS/src/com/company/: Main.java
(+7 files in other folders)
